--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -190,6 +190,10 @@ img {
   max-height:100%;
 }
 
+.splide__slide img {
+  width: 100%;
+  height: auto;
+}
 // Footer
 footer.fixed-bottom {
   background-color: var(--global-footer-bg-color);
